welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:16: error: not found: value &&
	    (a<20 && a>12)&&(b<20 && b>12)&&(c<20 && c>12))&&(d<20 && d>12) {
                                                           ^countTeen:23: error: not found: value d
(d<20 && d>12) 
 ^